@@ -1,6 +1,7 @@
 package com.kosta.geekku.service;
 
 import java.io.File;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.HashMap;
@@ -12,6 +13,7 @@ import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -62,8 +64,13 @@ public class CompanyServiceImpl implements CompanyService {
 
 		Company company = companyDto.toEntity();
 
-		// 회원가입시 기본이미지 설정
-		byte[] defaultProfileImage = Files.readAllBytes(Paths.get("src/main/resources/static/img/profileImg.png"));
+		// 회원가입시 기본이미지 설정 (클래스패스 리소스 로딩 방식 적용)
+		ClassPathResource resource = new ClassPathResource("static/img/profileImg.png");
+		//byte[] defaultProfileImage = Files.readAllBytes(Paths.get("src/main/resources/static/img/profileImg.png"));
+		byte[] defaultProfileImage;
+		try (InputStream in = resource.getInputStream()) {
+			defaultProfileImage = in.readAllBytes();
+		}
 		company.setProfileImage(defaultProfileImage);
 
 		companyRepository.save(company);
